# SAGE

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: default_rules.json
sage/: __main__.py
sage/cli/: app.py  browse.py  report_view.py  rule_builder.py  state.py  widgets.py
sage/domain/: categorization.py  conditions.py  money.py  rule.py  transaction.py
sage/engine/: categorizer.py
sage/ingest/: registry.py
sage/ingest/parsers/: base.py  mbank.py  millennium.py  pko.py
sage/reports/: aggregate.py
sage/storage/: rule_store.py  serialization.py  session_store.py
tests/: conftest.py  test_aggregate.py  test_categorizer.py  test_conditions.py  test_mbank.py  test_millennium_parser.py  test_money.py  test_pko.py  test_registry.py  test_rule.py  test_serialization.py  test_transaction.py
tests/fixtures/: mbank_sample.csv  millennium_sample.csv  pko_sample.csv
